####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = bookcase.png book.png hi16-app-bookcase.png hi32-app-bookcase.png person-open.png person.png video.png album.png bibtex.png coin.png card.png stamp.png wine.png comic.png cd-logo.png dvd-logo.png cassette-logo.png record-logo.png vhs-logo.png

####### kdevelop will overwrite this part!!! (end)############

KDE_OPTIONS = noautodist

icondir = ${kde_icondir}
icon_ICON = bookcase

picdir = ${kde_datadir}/bookcase/pics
pic_DATA = book.png bookcase.png person.png person-open.png album.png video.png bibtex.png coin.png card.png stamp.png wine.png comic.png cassette-logo.png cd-logo.png dvd-logo.png record-logo.png vhs-logo.png
