####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = \
album.png                 hi16-app-tellico.png    hi64-mime-tellico.png \
bibtex.png                hi16-mime-tellico.png   person-open.png \
tellico.png               hi22-app-tellico.png    person.png \
book.png                  hi22-mime-tellico.png   stamp.png \
card.png                  hi32-app-tellico.png    star_on.png \
coin.png                  hi32-mime-tellico.png   star_off.png \
comic.png                 hi48-app-tellico.png    video.png \
hi128-app-tellico.png     hi48-mime-tellico.png   wine.png \
hi128-mime-tellico.png    hi64-app-tellico.png    checkmark.png \
tellico.svg               tellico_mime.svg        stars10.png \
stars1.png                stars2.png              stars3.png \
stars4.png                stars5.png              stars6.png \
stars7.png                stars8.png              stars9.png \
README.icons              README.quesnay          game.png

####### kdevelop will overwrite this part!!! (end)############

KDE_OPTIONS = noautodist

KDE_ICON = tellico

picdir = ${kde_datadir}/tellico/pics
pic_DATA = \
album.png \
bibtex.png \
tellico.png \
tellico.svg \
tellico.svg \
tellico_mime.svg \
book.png \
card.png \
coin.png \
comic.png \
game.png \
person-open.png \
person.png \
stamp.png \
star_on.png \
star_off.png \
stars1.png \
stars2.png \
stars3.png \
stars4.png \
stars5.png \
stars6.png \
stars7.png \
stars8.png \
stars9.png \
stars10.png \
video.png \
wine.png \
checkmark.png \
README.icons \
README.quesnay

# probably a better way to do this
uninstall-hook:
	-if [ -d $(picdir) ]; then rmdir $(picdir); fi
